--- a/ocr_crnn/ocr_train.ipynb
+++ b/ocr_crnn/ocr_train.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "deab6913",
    "metadata": {},
    "outputs": [
@@ -233,8 +233,7 @@
     "            \n",
     "            nn.Conv2d(512, 512, kernel_size=3, padding=1), \n",
     "            nn.ReLU(True), \n",
-    "            nn.MaxPool2d((2, 1), (2, 1)) # -> height: 2. ЭТОГО СЛОЯ НЕ БЫЛО, ДОБАВЛЯЕМ ЕГО!\n",
-    "        )\n",
+    "            nn.MaxPool2d((2, 1), (2, 1)) # -> height: 2. \n",
     "        \n",
     "        # --- RNN часть (Мозг) ---\n",
     "        \n",
